# bachelor-thesis

./: Displaying_results.m  LICENSE.txt  README.md  main.py  models.py  pipeline.py  progress.json  pyproject.toml  setup_environment.py
ControllableModels/: IdentityMatrixMethod.py  SVDMethod.py  SVDMethod_unvectorized.py  TwoMatrixMethod.py
Tests/: test_2MM_method.py  test_Ident_method.py  test_SVD_method.py
controllableReLiNet models/: IdentityMatrixMethod.py  TwoMatrixMethod
models/: IdentityMatrixMethod.py  SVDMethod.py  TwoMatrixMethod.py
tmp/ControllableModels/ControllableReLiNet2MM/: ControllableReLiNet2MM-metadata.hdf5  ControllableReLiNet2MM.initializer.pth  ControllableReLiNet2MM.predictor.pth  config-ControllableReLiNet2MM.json
tmp/ControllableModels/ControllableReLiNetIdent/: ControllableReLiNetIdent-metadata.hdf5  ControllableReLiNetIdent.initializer.pth  ControllableReLiNetIdent.predictor.pth  config-ControllableReLiNetIdent.json
tmp/ControllableModels/ControllableReLiNetSVD/: ControllableReLiNetSVD-metadata.hdf5  ControllableReLiNetSVD.initializer.pth  ControllableReLiNetSVD.predictor.pth  config-ControllableReLiNetSVD.json
tmp/models/ControllableReLiNet/: ControllableReLiNet-metadata.hdf5  ControllableReLiNet.initializer.pth  ControllableReLiNet.predictor.pth  config-ControllableReLiNet.json
tmp/models/ControllableReLiNet2MM/: ControllableReLiNet2MM-metadata.hdf5  ControllableReLiNet2MM.initializer.pth  ControllableReLiNet2MM.predictor.pth  config-ControllableReLiNet2MM.json
tmp/models/ControllableReLiNetSVD/: ControllableReLiNetSVD.json  (+4 more)
(+19 files in other folders)
