[tool.poetry]
name = "bachelorproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

packages = [{include = "ControllableModels"}]

[tool.poetry.dependencies]
python = "^3.10"
deepsysid = {git = "https://github.com/AlexandraBaier/deepsysid.git"}
torch = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
